2007-06-29  Aaron Stone  <aaron@serendipity.cx>

	* dsn.c:
	Fixed incorrect dsn class for mailbox over quota (closes bug #617)
	* db.c, modules/dbmysql.c, modules/dbpgsql.c, modules/dbsqlite.c:
	Added query and transaction timing
	* sievecmd.c:
	General cleanups
	* modules/authsql.c:
	Fixed query result getting freed out from under us (closes bug #618)

2007-06-29  Paul J Stevens <paul@nfg.nl>

	* lmtp.c:
	make lmtpd return temp failure in case of database failure during 
	insertion
	* check_dbmail_db.c, db.c:
	catch potential segfault

2007-06-28  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	send fetch updates during mailbox_status run

2007-06-25  Aaron Stone  <aaron@serendipity.cx>

	* imap4.c, lmtp.c, pop3.c, timsieve.c, man/dbmail.conf.txt:
	Added configurable login banner (closes bug #611)
	* pop3.c, dbmail.conf, serverparent.c, timsieve.c, serverchild.c,
	lmtp.c, dbmailtypes.h, server.c, dbmail-imapsession.c,
	dbmail-imapsession.h:
	Added configurable login timeout (closes bug #616)

2007-06-24  Aaron Stone  <aaron@serendipity.cx>

	* sort.c:
	Resolved a trivial compiler warning.
	* dbmail-user.c:
	List forwards as part of 'dbmail-user -l' output (closes bug #605)
	* auth.h, authmodule.h, authmodule.c, modules/authsql.c,
	modules/authldap.c:
	New function auth_get_known_aliases.
	* list.h, list.c:
	New function g_list_dedup.
	* man/fixsp.pl, man/Makefile.am:
	Added a Perl script to fix the man page output.

2007-06-23  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-mailbox.c, serverparent.c, 
	test-scripts/testimap.py:
	fixing leaks
	* dbmail-imapsession.c, dbmail-mailbox.c, imapcommands.c:
	add some checks to avoid segfaults
	* imapcommands.c:
	issue BAD for thread=references
	* dbmail-imapsession.c:
	silence false error

2007-06-22  Aaron Stone  <aaron@serendipity.cx>

	* server.c:
	Reopen log files after a HUP (closes bug #615)

2007-06-21  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c: