@@ -128,6 +128,7 @@ TESTS=check_dbmail_common \
 	check_dbmail_mailbox \
 	check_dbmail_auth \
 	check_dbmail_misc \
+	check_dbmail_list \
 	check_dbmail_user \
 	check_dbmail_util \
 	check_dbmail_dsn \
@@ -147,6 +148,10 @@ check_dbmail_auth_INCLUDES=@CHECK_CFLAGS@
 check_dbmail_misc_SOURCES=check_dbmail_misc.c
 check_dbmail_misc_LDADD=libdbmail.la @CHECK_LIBS@
 check_dbmail_misc_INCLUDES=@CHECK_CFLAGS@
+
+check_dbmail_list_SOURCES=check_dbmail_list.c
+check_dbmail_list_LDADD=libdbmail.la @CHECK_LIBS@
+check_dbmail_list_INCLUDES=@CHECK_CFLAGS@
 
 check_dbmail_util_SOURCES=check_dbmail_util.c
 check_dbmail_util_LDADD=libdbmail.la @CHECK_LIBS@
